# arduino-libhelix

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  library.properties
.github/ISSUE_TEMPLATE/: Issue-report.yml
doc/html/: _a_a_c_decoder_helix_8h_source.html  _common_helix_8h_source.html  _m_p3_decoder_helix_8h_source.html  annotated.html  class_a_a_c_decoder_helix-members.html  class_a_a_c_decoder_helix.html  class_common_helix-members.html  class_common_helix.html  class_m_p3_decoder_helix-members.html  class_m_p3_decoder_helix.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
docs/html/: _a_a_c_decoder_helix_8h_source.html  _common_helix_8h_source.html  _config_helix_8h_source.html  _m_p3_decoder_helix_8h_source.html  annotated.html  class_a_a_c_decoder_helix-members.html  class_a_a_c_decoder_helix.html  class_common_helix-members.html  class_common_helix.html  class_m_p3_decoder_helix-members.html  class_m_p3_decoder_helix.html  classes.html  classlibhelix_1_1_a_a_c_decoder_helix-members.html  classlibhelix_1_1_a_a_c_decoder_helix.html  classlibhelix_1_1_common_helix-members.html  classlibhelix_1_1_common_helix.html  classlibhelix_1_1_m_p3_decoder_helix-members.html  classlibhelix_1_1_m_p3_decoder_helix.html  files.html  functions.html  functions_func.html  helix__log_8h_source.html  helix__pgm_8h_source.html  hierarchy.html  index.html  menudata.js  structlibhelix_1_1_range-members.html  structlibhelix_1_1_range.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js
examples/output_aac/: CMakeLists.txt  desktop_aac.cpp  output_aac.ino
examples/output_mp3/: CMakeLists.txt  output_mp3.ino
src/: AACDecoderHelix.h  CommonHelix.h  ConfigHelix.h  MP3DecoderHelix.h  helix_log.h  helix_pgm.h
src/libhelix-aac/: aaccommon.h  aacdec.h  assembly.h  buffers.c  fft.c  huffman.c  noiseless.c  sbr.c  sbrqmf.c
src/libhelix-mp3/: assembly.h  bitstream.c  buffers.c  coder.h  dct32.c  dqchan.c  huffman.c  hufftabs.c  imdct.c  mp3common.h  mp3dec.c  mp3dec.h  mp3tabs.c  trigtabs.c
src/utils/: Allocator.h  Buffers.h  Vector.h  helix_log.h  helix_log_idf.h  helix_log_std.h  helix_memory.cpp  helix_memory.h
